# CoverEveryStreet

./: .gitignore  Makefile  PLAN.md  README.md  app.py  config.py  pyproject.toml  requirements.txt  viewer.py
R/: Edges.R  Linestring.R  Parallel_Edges.R  Segment_Labeling.R  Segment_Mapping.R  compileParSapplyOutput.R  haltSegmentWalkNodes.R  makeLinestring.R  networkClusters.R  randomID.R  replaceDataframeRow.R  secondsToPeriodTime.R  streetPlots.R  subsetNetwork.R
apps/: editor.py  viewer.py
data/: intersection_nodes_2021-08-24.RDS  segmented_street_network_parallel_cases_labeled_10km.RDS  zip_code_charlotte.csv
notebooks/: api_query.Rmd  develop_directional_segment_walk.Rmd  develop_parallel_segment_labeling_process.Rmd  develop_parallel_segment_mapping_process.Rmd  develop_process_to_identify_parallel_edges.Rmd  develop_process_to_identify_parallel_edges_without_parallel_preprocessing.Rmd  develop_process_to_split_parallel_edges.Rmd  eda_multiline_between_nodes.Rmd  eda_paint_lines_w_gps_tracking.Rmd  eda_parallel_edges_compiled_identify.Rmd  eda_parallel_edges_split.Rmd  eda_parallel_edges_step_by_step_identify.Rmd  eda_visualization.Rmd  exploration.Rmd  generate_edge_table.Rmd  generate_intersection_nodes.Rmd  generate_network_00_osm_api_query.Rmd  generate_network_01_dodgr.Rmd  generate_network_02_segments_pre_parallel_sep.Rmd  generate_network_02_segments_pre_parallel_sep.html  generate_network_03_parallel_edges_identification.Rmd  generate_network_03_parallel_edges_identification_AWS.Rmd  generate_segment_connection_map.Rmd  openstreetsmap_local_save.Rmd  (+5 more)
(+22 files in other folders)
