[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walk-every-street"
version = "0.1.0"
description = "Track and visualize progress walking every street in a city using GPX data"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.37",
    "streamlit-folium>=0.18",
    "osmnx>=1.9",
    "geopandas>=0.14",
    "shapely>=2.0",
    "gpxpy>=1.6",
    "folium>=0.15",
    "pandas>=2.0",
    "fiona>=1.9",
    "fit2gpx>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "ui", "pages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
